--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,30 @@
 {
   "name": "backend",
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node index.js"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init",
+    "prisma:seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.5",
+    "@types/jest": "^29.0.0",
+    "@types/node": "^24.10.0",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.0.0",
+    "prisma": "^5.0.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   }
 }
